--- a/project.yaml
+++ b/project.yaml
@@ -57,7 +57,7 @@ actions:
         graph: analysis/output/an_covid_vs_othercauses_abs_AGE_GRAPH.svg
         estimates: analysis/output/an_covid_vs_othercauses_abs_AGE_ESTIMATES.dta
 
-  covnoncov_logisticmodels:
+  agesexmodels:
     run: stata-mp:latest analysis/an_covidvsnoncovid_agesex.do
     needs: [crmain]
     outputs:
@@ -65,9 +65,35 @@ actions:
         log: analysis/output/an_covidvsnoncovid_agesex.log
         models: analysis/output/models/an_covidvsnoncovid_agesex_*.ster
   
+  fulladjmodels:
+    run: stata-mp:latest analysis/an_covidvsnoncovid_full.do
+    needs: [crmain]
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_covidvsnoncovid_full.log
+        models: analysis/output/models/an_covidvsnoncovid_full_*.ster  
+  
+  agesex2019models:
+    run: stata-mp:latest analysis/an_noncovid_2019_agesex.do
+    needs: [cr2019]
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_noncovid_2019_agesex.log
+        models: analysis/output/models/an_noncovid_2019_agesex_*.ster  
+  
+  
+  fulladj2019models:
+    run: stata-mp:latest analysis/an_noncovid_2019_full.do
+    needs: [cr2019]
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_noncovid_2019_full.log
+        models: analysis/output/models/an_noncovid_2019_full_*.ster  
+    
+  
   covnoncov_forestplot:
     run: stata-mp:latest analysis/an_processout_agesex_covvsnon_forestplots.do
-    needs: [covnoncov_logisticmodels]
+    needs: [agesexmodels]
     outputs:
       moderately_sensitive:
         log: analysis/output/an_processout_agesex_covvsnon_forestplots_TABLE.txt
@@ -80,6 +106,16 @@ actions:
       moderately_sensitive:
         log: analysis/output/an_ethnicitybycod.log
         graph: analysis/output/an_ethnicitybycod.svg
+ 
+  deathsonlyanalysis:
+    run: stata-mp:latest analysis/an_deathsonlyanalysis.do
+    needs: [crmain]
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_deathsonlyanalysis.log
+        models: analysis/output/models/an_deathsonlyanalysis_*.ster  
+   
+   
    
   run_model:
     run: stata-mp:latest analysis/model.do
