processout_appx_results

--- a/project.yaml
+++ b/project.yaml
@@ -90,7 +90,6 @@ actions:
         log: analysis/output/an_noncovid_2019_full.log
         models: analysis/output/models/an_noncovid_2019_full_*.ster  
     
-  
   covnoncov_forestplot:
     run: stata-mp:latest analysis/an_processout_agesex_covvsnon_forestplots.do
     needs: [agesexmodels]
@@ -99,7 +98,19 @@ actions:
         log: analysis/output/an_processout_agesex_covvsnon_forestplots_TABLE.txt
         graph: analysis/output/an_processout_agesex_covvsnon_forestplots_GRAPH.svg
  
-  ethnicity_model:
+  covnoncov_appxestimatestable:
+    run: stata-mp:latest analysis/an_processout_agesex_covvsnon_table.do
+    needs: 
+      - agesexmodels 
+      - fulladjmodels 
+      - agesex2019models 
+      - fulladj2019models
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_processout_agesex_covvsnon_table.txt
+ 
+ 
+  ethnicity_model_and_graph:
     run: stata-mp:latest analysis/an_ethnicitybycod.do
     needs: [crmain]
     outputs:
@@ -107,7 +118,7 @@ actions:
         log: analysis/output/an_ethnicitybycod.log
         graph: analysis/output/an_ethnicitybycod.svg
  
-  deathsonlyanalysis:
+  deathsonly_models:
     run: stata-mp:latest analysis/an_deathsonlyanalysis.do
     needs: [crmain]
     outputs:
@@ -115,7 +126,13 @@ actions:
         log: analysis/output/an_deathsonlyanalysis.log
         models: analysis/output/models/an_deathsonlyanalysis_*.ster  
    
-   
+  deathsonly_ORfigure:
+    run: stata-mp:latest analysis/an_processout_deathsonlyanalysis.do
+    needs: [deathsonly_models]
+    outputs:
+      moderately_sensitive:
+        log: analysis/output/an_processout_deathsonlyanalysis_TABLE.txt
+        graph: analysis/output/an_processout_deathsonlyanalysis_GRAPH.svg 
    
   run_model:
     run: stata-mp:latest analysis/model.do
